# ex4new

./: CMakeLists.txt  Mtmchkin.cpp  Mtmchkin.h  deck.txt  utilities.cpp  utilities.h
Cards/: BattaleCard.cpp  BattaleCard.h  Card.h  Dragon.cpp  Dragon.h  Gremlin.h  Mana.h  Merchant.h  Treasure.h  Well.cpp  Well.h  Witch.cpp
Players/: Warrior.h
submission/: Exception.h  test.cpp
submission/Cards/: Barfight.cpp  Barfight.h  Card.cpp  Gremlin.cpp  Mana.cpp  Merchant.cpp  Treasure.cpp  Witch.h
submission/Players/: Healer.cpp  Healer.h  Ninja.cpp  Ninja.h  Player.cpp  Player.h  Warrior.cpp
submission/tool/: main.cpp
tool/: main.cpp
